added comments to ProgramControllerTest